Fixed sizing issues on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
+  /* height: 100%; */
   /* overflow-y: hidden;
   overflow-x: hidden;
   position: relative; */
+  position: relative;
+  width: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-html {
-  height: 100%;  
 }
