--- a/src/styles/card-container.css
+++ b/src/styles/card-container.css
@@ -11,6 +11,6 @@
 @media (orientation: portrait) {
     .card-container {           
         justify-content: flex-start;
-        flex-wrap: wrap;
+        
     }
 }
