--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,7 @@
 .header {
   background-color: black;
   width: 100%;
-  height: 10rem;
+  height: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,6 +12,6 @@
 
 .logo {
     color: white;
-    font-size:5.5rem;
+    font-size:3rem;
     font-weight: bold;
 }
